<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>hr.fer.oop</groupId>
  <artifactId>09_Collections</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>09_Collections</name>
  <properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>		
				<configuration>
					<release>11</release>		
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
